2006-10-21  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/striso.refs: updated streams release number
	* striso.lsm.in: updated LiS release number
	* debian/control.in: updated LiS release number
	* doc/manual/releases.texi: updated LiS release number

2006-10-12  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/Makefile.am: manpage fixups for release
	* doc/man/man4/iso-lan.4.man: manpage fixups for release
	* doc/man/man4/itos.4.man: manpage fixups for release
	* doc/man/man4/itot.4.man: manpage fixups for release
	* doc/man/man4/lapb.4.man: manpage fixups for release
	* doc/man/man4/lpp.4.man: manpage fixups for release
	* doc/man/man4/ns-tcp.4.man: manpage fixups for release
	* doc/man/man4/plp.4.man: manpage fixups for release
	* doc/man/striso.refs: manpage fixups for release

	* acinclude.m4: removed redundant debug flags
	* src/drivers/tp.c: removed redundant debug flags
	* src/modules/itot.c: got this module compiling

2006-10-10  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* doc/man/man4/clns.4.man: updates for release
	* doc/man/man4/cmot.4.man: updates for release
	* doc/man/man4/ISO.4.man: updates for release
	* doc/man/man4/iso-ip.4.man: updates for release
	* doc/man/man4/iso-lan.4.man: updates for release
	* doc/man/man4/isos.4.man: updates for release
	* doc/man/man4/isot.4.man: updates for release
	* doc/man/man4/itot.4.man: updates for release
	* doc/man/man4/lpp.4.man: updates for release
	* doc/man/man4/plp.4.man: updates for release
	* doc/man/man4/tp.4.man: updates for release
	* doc/man/man4/xot.4.man: updates for release
	* doc/man/striso.refs: updates for release
	* doc/manual/descrip.texi: updates for release
	* NEWS: updates for release
	* NOTES: updates for release
	* README: updates for release
	* src/drivers/tp.c: updates for release
	* src/modules/isot.c: updates for release
	* src/modules/itot.c: updates for release
	* src/modules/tcpns.c: updates for release
	* THANKS: updates for release
